tests/negative/semantic/wrong_arg_count_contains/input.ci
void main() {
    print(toString(contains("a")) + "\n");
}
